# web-renderer-example

./: Cargo.toml  README.md  makefile
public/: index.html
renderer/: Cargo.toml  build.rs
renderer/src/: assets.rs  buffers.rs  camera.rs  instance.rs  lib.rs  model.rs  state.rs  texture.rs  vertex.rs
renderer/src/shaders/: shader1.wgsl  shader2.wgsl
server/: Cargo.toml
server/src/: main.rs  templates.rs
server/templates/: hello.html
