[package]
name = "renderer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bytemuck = { version = "1.14.0", features = ["derive"] }
cfg-if = "1.0.0"
cgmath = "0.18.0"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
env_logger = "0.10.0"
futures = "0.3.28"
getrandom = { version = "0.2.10", features = ["js"] }
image = { version = "0.24.7", default-features = false, features = [
    "png",
    "jpeg",
] }
log = "0.4.20"
pollster = "0.3.0"
reqwest = "0.11.20"
tobj = { version = "4.0.0", features = ["async"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = [
    "Document",
    "Window",
    "Element",
    "Location",
] }
wgpu = { version = "0.17.0", features = ["webgl"] }
winit = "0.28.6"

[build-dependencies]
fs_extra = "1.3.0"
glob = "0.3.1"
anyhow = "1.0.75"

[lib]
name = "renderer"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "renderer"
path = "src/main.rs"
